centre align some of the icons; fixes #7

--- a/stylesheets/file-icons.less
+++ b/stylesheets/file-icons.less
@@ -67,6 +67,11 @@
 .file-icon-gif:before { .medium-yellow; }
 .file-icon-jpg:before { .medium-green;  }
 
+// Default icon: book
+.icon-book[data-name="README.md"]:before { left: -1px; }
+.icon-book[data-name="Readme.md"]:before { left: -1px; }
+.icon-book[data-name="readme.md"]:before { left: -1px; }
+
 // No default icons
 .file-icon-md:before  { .medium-blue;   }
 .file-icon-txt:before { .medium-cyan;   }
