--- a/stylesheets/icons.less
+++ b/stylesheets/icons.less
@@ -1,14 +1,14 @@
 // Octicon icons, from: https://github.com/styleguide/css/7.0
 
 .checklist-icon { content: "\f076"; }
-.code-icon      { content: "\f05f"; }
+.code-icon      { content: "\f05f"; left: -1px;}
 .comment-icon   { content: "\f02b"; }
 .dashboard-icon { content: "\f07d"; }
 .database-icon  { content: "\f096"; }
 .gear-icon      { content: "\f02f"; }
 .git-icon       { content: "\f00a"; }
 .package-icon   { content: "\f0c4"; }
-.ruby-icon      { content: "\f047"; }
+.ruby-icon      { content: "\f047"; left: -2px;}
 .secret-icon    { content: "\f08c"; }
 .xml-icon       { content: "\f010"; }
 
@@ -26,4 +26,4 @@
 
 .mf { font-family: "FontMfizz"; font-size: small; }
 
-.python-icon { .mf; content: "\f109"; }
+.python-icon { .mf; content: "\f109"; left: 1px;}
